Filter for time-series collections using the presence of TimeseriesOptions instead of looking at the namespace

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2021-08-23
    • 160
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There was a build failure where jstestfuzz created a buckets collection without it being a time-series collection. To avoid this failure when downgrading FCV, we should filter for time-series collections using the presence of the TimeseriesOptions object in the collection.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: