SERVER-59405 Filter for time-series collections using the presence of TimeseriesOptions instead of looking at the namespace